Fix a bug in drawBuffers optimization.

We filter out draw buffers that are not written to and are not NONE, but
currently we only do that on Draw calls, not Clear.  This CL fixes this.

BUG=678153
TEST=webgl_conformance, test case from the bug
R=kbr@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2611403002
Cr-Commit-Position: refs/heads/master@{#442131}

Former-commit-id: 3e2c0df8485250d7bd94ab90fc6a260bf89cef71