gpu/command_buffer/service/framebuffer_manager.h
@@ -194,6 +194,11 @@ class GPU_EXPORT Framebuffer : public base::RefCounted<Framebuffer> {
   bool ValidateAndAdjustDrawBuffers(uint32_t fragment_output_type_mask,
                                     uint32_t fragment_output_written_mask);
 
+  // Filter out the draw buffers that have no images attached but are not NONE
+  // through DrawBuffers, to be on the safe side.
+  // This is applied before a clear call.
+  void AdjustDrawBuffers();
+
   bool ContainsActiveIntegerAttachments() const;
 
   // Return true if any draw buffers has an alpha channel.
@@ -246,6 +251,9 @@ class GPU_EXPORT Framebuffer : public base::RefCounted<Framebuffer> {
   // If an attachment point has no image, it's set as UNDEFINED_TYPE.
   // This call is only valid on a complete fbo.
   void UpdateDrawBufferMasks();
+
+  // Helper for ValidateAndAdjustDrawBuffers() and AdjustDrawBuffers().
+  void AdjustDrawBuffersImpl(uint32_t desired_mask);
 
   // The managers that owns this.
   FramebufferManager* manager_;
